Changed wording for performance results compared to C

--- a/docs/HCAR/Issue19/template.tex
+++ b/docs/HCAR/Issue19/template.tex
@@ -39,12 +39,13 @@ to extend coverage based on the needs of projects which use the library.
 We are in the final stages of preparing the first release of Haskell-MPI. We will
 publish the code on Hackage once the user documentation is complete.
 We have run various simple latency and bandwidth tests using up to 512 Intel x86-64 cores, and
-for the high-performance interface, the results are comparable to C.
+for the high-performance interface, the results are within acceptable bounds to those
+achieved by C.
 Haskell-MPI is designed to work with any compliant implementation of MPI, and we
 have successfully tested it with both OpenMPI (\url{http://www.open-mpi.org/}) and
 MPICH2 (\url{http://www.mcs.anl.gov/research/projects/mpich2/}).
 
-The source code repository can be downloaded from Github:
+The source code repository can be browsed or downloaded from Github:
   \url{http://github.com/bjpop/haskell-mpi}.
 
 \end{hcarentry}
