--- a/docs/HCAR/Issue19/template.tex
+++ b/docs/HCAR/Issue19/template.tex
@@ -39,7 +39,7 @@ to extend coverage based on the needs of projects which use the library.
 We are in the final stages of preparing the first release of Haskell-MPI. We will
 publish the code on Hackage once the user documentation is complete.
 We have run various simple latency and bandwidth tests using up to 512 Intel x86-64 cores, and
-for the high-performance interface, the results are within acceptable bounds to those
+for the high-performance interface, the results are within acceptable bounds of those
 achieved by C.
 Haskell-MPI is designed to work with any compliant implementation of MPI, and we
 have successfully tested it with both OpenMPI (\url{http://www.open-mpi.org/}) and
