--- a/docs/HCAR/Issue19/HaskellMPI-BH.tex
+++ b/docs/HCAR/Issue19/HaskellMPI-BH.tex
@@ -7,7 +7,7 @@
 \makeheader
 
 MPI, the \emph{Message Passing Interface}, is a popular communications protocol
-for distributed parallel computing (\url{http://www.mpi-forum.org/}). It is widely
+for distributed parallel computing (\url{https://www.mpi-forum.org/}). It is widely
 used in high performance scientific computing, and is designed to scale up from
 small multi-core personal computers to massively parallel supercomputers.
 MPI applications
@@ -37,9 +37,9 @@ We have run various simple latency and bandwidth tests using up to 512 Intel x86
 for the high-performance interface, the results are within acceptable bounds of those
 achieved by C.
 Haskell-MPI is designed to work with any compliant implementation of MPI, and we
-have successfully tested it with both OpenMPI (\url{http://www.open-mpi.org/}) and
-MPICH2 (\url{http://www.mcs.anl.gov/research/projects/mpich2/}).
+have successfully tested it with both OpenMPI (\url{https://www.open-mpi.org/}) and
+MPICH2 (\url{https://www.mpich.org/}).
 
 \FurtherReading
-  \url{http://github.com/bjpop/haskell-mpi}
+  \url{https://github.com/bjpop/haskell-mpi}
 \end{hcarentry}
